--- a/source/photo.html
+++ b/source/photo.html
@@ -14,27 +14,43 @@
     <div class="page-header__inner">
       <div class="button-list page-header__button-list">
         <a class="button-list__logo" href="#">
-          <svg class="button-list__logo-button" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="74.426px" height="22.859px" viewBox="0 0 74.426 22.859" enable-background="new 0 0 74.426 22.859" xml:space="preserve">
+          <svg class="button-list__logo-image" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="74.426px" height="22.859px" viewBox="0 0 74.426 22.859" enable-background="new 0 0 74.426 22.859" xml:space="preserve">
             <g>
-              <path fill="var(--color)"
+              <path fill=""
                 d="M0,1.449c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.147v0.064 c0,4.861-4.057,7.373-8.854,7.373H2.544v6.825c0,0.708-0.58,1.288-1.288,1.288C0.58,22.859,0,22.279,0,21.571V1.449z M8.114,12.428 c3.734,0,6.182-1.996,6.182-4.958V7.405c0-3.22-2.415-4.894-6.054-4.894H2.544v9.917H8.114z" />
-              <path fill="var(--color)" d="M21.729,1.288C21.729,0.58,22.308,0,22.983,0c0.709,0,1.288,0.58,1.288,1.288v20.283 c0,0.708-0.579,1.288-1.288,1.288c-0.676,0-1.255-0.58-1.255-1.288V1.288z" />
-              <path fill="var(--color)"
+              <path fill="" d="M21.729,1.288C21.729,0.58,22.308,0,22.983,0c0.709,0,1.288,0.58,1.288,1.288v20.283 c0,0.708-0.579,1.288-1.288,1.288c-0.676,0-1.255-0.58-1.255-1.288V1.288z" />
+              <path fill=""
                 d="M30.87,1.32c0-0.676,0.579-1.256,1.256-1.256h0.354c0.58,0,0.934,0.29,1.288,0.74l13.684,17.45V1.256 C47.451,0.58,47.998,0,48.707,0c0.676,0,1.223,0.58,1.223,1.256v20.348c0,0.676-0.482,1.191-1.158,1.191h-0.129 c-0.548,0-0.934-0.322-1.32-0.772L33.349,4.153v17.45c0,0.676-0.547,1.256-1.255,1.256c-0.677,0-1.224-0.58-1.224-1.256V1.32z" />
-              <path fill="var(--color)"
+              <path fill=""
                 d="M56.3,1.288C56.3,0.58,56.879,0,57.556,0c0.708,0,1.287,0.58,1.287,1.288v12.331L71.689,0.451 C71.979,0.193,72.269,0,72.688,0c0.676,0,1.224,0.612,1.224,1.256c0,0.354-0.161,0.644-0.419,0.901l-7.984,7.92l8.564,10.561 c0.225,0.29,0.354,0.547,0.354,0.934c0,0.676-0.579,1.288-1.287,1.288c-0.483,0-0.806-0.258-1.03-0.58l-8.403-10.463l-4.862,4.861 v4.894c0,0.708-0.579,1.288-1.287,1.288c-0.677,0-1.256-0.58-1.256-1.288V1.288z" />
             </g>
           </svg>
         </a>
-        <a class="button-close button-close--active button-list__button-close">
+        <a class="button-list__button-open--opened button-list__button-open button-list__button-open--nojs">
+          <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="49.945px" height="24.007px" viewBox="0 0 49.945 24.007" enable-background="new 0 0 49.945 24.007" xml:space="preserve">
+            <g id="miu">
+              <g id="editor_list_view_hambuger_menu_glyph">
+                <g>
+                  <path id="path-1" fill="var(--color)"
+                    d="M1.137,0C0.51,0,0,0.428,0,1.01v1.981c0,0.558,0.494,1.01,1.139,1.01h47.671 c0.628,0,1.138-0.428,1.138-1.01V1.01c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,10.003C0.51,10.003,0,10.431,0,11.013v1.98 c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01v-1.98c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,20.005C0.51,20.005,0,20.434,0,21.016v1.981c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01 v-1.981c0-0.558-0.494-1.011-1.138-1.011H1.137z" />
+                </g>
+                <g>
+                  <path id="path-1_1_" fill="var(--color)"
+                    d="M1.137,0C0.51,0,0,0.428,0,1.01v1.981c0,0.558,0.494,1.01,1.139,1.01h47.671 c0.628,0,1.138-0.428,1.138-1.01V1.01c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,10.003C0.51,10.003,0,10.431,0,11.013v1.98 c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01v-1.98c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,20.005C0.51,20.005,0,20.434,0,21.016v1.981c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01 v-1.981c0-0.558-0.494-1.011-1.138-1.011H1.137z" />
+                </g>
+              </g>
+            </g>
+          </svg>
+        </a>
+        <a class="button-list__button-close--closed button-list__button-close button-list__button-close--nojs ">
           <svg class="button-list__button-close" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="23.867px" height="23.867px" viewBox="0 0 23.867 23.867" enable-background="new 0 0 23.867 23.867" xml:space="preserve">
-            <path fill="var(--color)"
+            <path fill=""
               d="M15.087,11.933l8.56-8.559c0.293-0.293,0.293-0.768,0-1.061L21.554,0.22C21.414,0.079,21.223,0,21.023,0 c-0.199,0-0.391,0.079-0.529,0.22l-8.561,8.56l-8.56-8.56c-0.282-0.282-0.78-0.282-1.061,0L0.22,2.313 c-0.293,0.293-0.293,0.768,0,1.061l8.56,8.559l-8.56,8.559c-0.293,0.293-0.293,0.768,0,1.062l2.093,2.094 c0.141,0.142,0.331,0.22,0.53,0.22c0.199,0,0.39-0.078,0.53-0.22l8.561-8.56l8.56,8.56c0.141,0.142,0.332,0.22,0.53,0.22 c0.199,0,0.39-0.078,0.53-0.22l2.093-2.094c0.293-0.294,0.293-0.769,0-1.062L15.087,11.933z" />
           </svg>
         </a>
       </div>
       <nav class="page-header__nav">
-        <ul class="page-header__nav-list">
+        <ul class="page-header__nav-list page-header__nav-list--closed page-header__nav-list--nojs">
           <li class="page-header__nav-item">
             <a class="page-header__link" href="index.html">Главная</a>
           </li>
@@ -64,9 +80,9 @@
       <ul class="photo-list page-main__photo-list">
         <li class="photo-list__item photo-list__item--panorama page-main__photo-list">
           <img class="photo-list__image" src="img/panorama-mobile@1x.jpg" width="320" height="137" alt="Панорама">
-          <span class="photo-list__item-name">Анна
+          <p class="photo-list__item-name">Анна
             <b class="photo-list__item-time">(5 минут назад)</b>
-          </span>
+          </p>
           <p class="photo-list__item-paragraph">
             Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую
             трансляцию в перископе, задавайте свои вопросы!
@@ -84,9 +100,9 @@
         </li>
         <li class="photo-list__item">
           <img class="photo-list__image" src="img/photo-car-mobile@1x.jpg" width="280" height="180" alt="Машина">
-          <span class="photo-list__item-name">Левон
+          <p class="photo-list__item-name">Левон
             <b class="photo-list__item-time">(5 часов назад)</b>
-          </span>
+          </p>
           <p class="photo-list__item-paragraph">
             Вчера он на луну летал, сегодня в руки к нам попал.
           </p>
@@ -103,9 +119,9 @@
         </li>
         <li class="photo-list__item">
           <img class="photo-list__image" src="img/photo-drumset-mobile@1x.jpg" width="280" height="180" alt="Барабаны">
-          <span class="photo-list__item-name">Антон
+          <p class="photo-list__item-name">Антон
             <b class="photo-list__item-time">(12 часов назад)</b>
-          </span>
+          </p>
           <p class="photo-list__item-paragraph">Соседи будут рады.</p>
           <span class="photo-list__item-like">
             <svg class="photo-list__item-heart" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99"
@@ -120,9 +136,9 @@
         </li>
         <li class="photo-list__item">
           <img class="photo-list__image" src="img/photo-window-mobile@1x.jpg" width="280" height="180" alt="Окно">
-          <span class="photo-list__item-name">Борис
+          <p class="photo-list__item-name">Борис
             <b class="photo-list__item-time">(20 часов назад)</b>
-          </span>
+          </p>
           <p class="photo-list__item-paragraph">
             Здесь могла быть ваша цитата о высоком и вечном.
           </p>
@@ -139,9 +155,9 @@
         </li>
         <li class="photo-list__item">
           <img class="photo-list__image" src="img/photo-fair-mobile@1x.jpg" width="280" height="180" alt="Ярмарка">
-          <span class="photo-list__item-name">Сергей
+          <p class="photo-list__item-name">Сергей
             <b class="photo-list__item-time">(25 часов назад)</b>
-          </span>
+          </p>
           <p class="photo-list__item-paragraph">Самая кубанская в мире!</p>
           <span class="photo-list__item-like">
             <svg class="photo-list__item-heart" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99"
@@ -156,9 +172,9 @@
         </li>
         <li class="photo-list__item">
           <img class="photo-list__image" src="img/photo-pov-mobile@1x.jpg" width="280" height="180" alt="Горы">
-          <span class="photo-list__item-name">Максим
+          <p class="photo-list__item-name">Максим
             <b class="photo-list__item-time">(40 часов назад)</b>
-          </span>
+          </p>
           <p class="photo-list__item-paragraph">Где снег-то?</p>
           <span class="photo-list__item-like">
             <svg class="photo-list__item-heart" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99"
@@ -173,9 +189,9 @@
         </li>
         <li class="photo-list__item">
           <img class="photo-list__image" src="img/photo-wing-mobile@1x.jpg" width="280" height="180" alt="Крыло">
-          <span class="photo-list__item-name">Надежда
+          <p class="photo-list__item-name">Надежда
             <b class="photo-list__item-time">(45 часов назад)</b>
-          </span>
+          </p>
           <p class="photo-list__item-paragraph">Всем GM и взаимные лайки!</p>
           <span class="photo-list__item-like">
             <svg class="photo-list__item-heart" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99"
@@ -197,12 +213,12 @@
         <a href="#">
           <svg class="page-footer__logo-image" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="146.3px" height="40.375px" viewBox="0 0 146.3 40.375" enable-background="new 0 0 146.3 40.375" xml:space="preserve">
             <g>
-              <path fill="var(--color)"
+              <path fill=""
                 d="M71.874,18.661c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.146v0.063 c0,4.86-4.057,7.373-8.854,7.373h-5.475v6.825c0,0.708-0.58,1.287-1.289,1.287c-0.676,0-1.256-0.58-1.256-1.287L71.874,18.661 L71.874,18.661z M79.988,29.641c3.734,0,6.182-1.996,6.182-4.959v-0.062c0-3.221-2.414-4.894-6.053-4.894h-5.699v9.917h5.57V29.641 z" />
-              <path fill="var(--color)" d="M93.603,18.5c0-0.708,0.579-1.288,1.255-1.288c0.709,0,1.288,0.58,1.288,1.288v20.283 c0,0.708-0.579,1.287-1.288,1.287c-0.676,0-1.255-0.579-1.255-1.287V18.5z" />
-              <path fill="var(--color)"
+              <path fill="" d="M93.603,18.5c0-0.708,0.579-1.288,1.255-1.288c0.709,0,1.288,0.58,1.288,1.288v20.283 c0,0.708-0.579,1.287-1.288,1.287c-0.676,0-1.255-0.579-1.255-1.287V18.5z" />
+              <path fill=""
                 d="M102.744,18.532c0-0.676,0.58-1.256,1.256-1.256h0.354c0.58,0,0.935,0.29,1.288,0.74l13.684,17.45V18.468 c0-0.676,0.547-1.256,1.256-1.256c0.676,0,1.225,0.58,1.225,1.256v20.349c0,0.677-0.48,1.19-1.158,1.19h-0.129 c-0.548,0-0.936-0.321-1.318-0.772l-13.976-17.867v17.449c0,0.677-0.547,1.257-1.257,1.257c-0.676,0-1.223-0.58-1.223-1.257V18.532 H102.744z" />
-              <path fill="var(--color)"
+              <path fill=""
                 d="M128.173,18.5c0-0.708,0.58-1.288,1.257-1.288c0.708,0,1.286,0.58,1.286,1.288v12.331l12.848-13.16 c0.29-0.257,0.579-0.451,0.998-0.451c0.676,0,1.225,0.612,1.225,1.256c0,0.354-0.162,0.644-0.42,0.901l-7.984,7.92l8.564,10.561 c0.225,0.291,0.354,0.547,0.354,0.936c0,0.676-0.577,1.288-1.285,1.288c-0.482,0-0.807-0.259-1.03-0.58l-8.401-10.464l-4.863,4.861 v4.895c0,0.708-0.578,1.288-1.286,1.288c-0.677,0-1.257-0.58-1.257-1.288V18.5H128.173z" />
             </g>
             <path fill="#FFFFFF" d="M60.498,28.266" />
@@ -244,13 +260,14 @@
         <b class="page-footer__copyright-text">Разработано:</b>
         <a class="page-footer__copyright-button" href="https://htmlacademy.ru/intensive/adaptive">
           <svg class="page-footer__copyright-image" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
-            <path fill="var(--color)"
+            <path fill=""
               d="M13.62,0.017L13.472,0L0,1.412v24.661l13.472,8.017l13.43-7.99l0.042-0.026V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 l-0.001-0.104L13.407,5.28l-0.088-0.056v0.109L1.925,12.118V3.147l11.547-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.013,1.415l5.904,3.513l-0.86,0.507l-5.031-2.992l-0.013,1.415l3.827,2.275l-0.782,0.523l-3.032-1.787 l-0.013,1.413l1.852,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.015,1.044l-7.941-4.728L5.395,19.65 l7.979,4.796l0.017,1.076l-7.972-4.741l-0.013,1.415l8.021,4.821l0.045,0.026l8.143-4.872v-1.268l-0.011-0.148v-3.761l3.415-2.036 v10.02L13.472,31.85L1.925,24.979V15.127z" />
           </svg>
         </a>
       </div>
     </div>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
